# SFT_GRPO_2

./: .gitignore  README.md  pyproject.toml
llama/llama3.2_base_cs_chat_v4/: README.md
llama/llama3.2_base_cs_chat_v4/checkpoint-4400/: trainer_state.json
llama/scripts/: test_generation.py
mistral/: config.py  mistral_v3.py
mistral/scripts/: create_dataset_v2.py
mistral/tests/: paths.py  test_sft_pipeline.py
src/sft_grpo/: config.py
src/sft_grpo/grpo/mistral_grpo/: mistral_grpo_config.py
src/sft_grpo/grpo/mistral_grpo/mistral_grpo_tests/: test_config_paths_imports
src/sft_grpo/sft/llama/: llama_config.py  v3.py  v4.py
src/sft_grpo/sft/llama/llama3.2_base_cs_chat_v4_final/: chat_template.jinja
src/sft_grpo/sft/llama/scripts/: inspect_dataset.py  test_chat_templates.py
src/sft_grpo/sft/mistral/: mistral_config.py  mistral_sft_utils.py  mistral_v1.py  mistral_v3.py
src/sft_grpo/sft/mistral/archive/: mistral_v2.py
src/sft_grpo/sft/mistral/mistral_7B_customized_tokenizer/: chat_template.jinja  tokenizer_config.json
src/sft_grpo/sft/mistral/mistral_7B_customized_tokenizer_v2/: chat_template.jinja
src/sft_grpo/sft/mistral/scripts/: compute_best_r.py  create_dataset.py  create_dataset_v2.py  explore_dataset_structure.py  generation_dialogue_test.py  generation_tests.py  try_generation.py  understand_labeling_masking.py
src/sft_grpo/sft/mistral/tests/: test_sft_pipeline.py
src/sft_grpo/sft/mistral_sft/: mistral_sft_config.py  mistral_v3.py
src/sft_grpo/sft/mistral_sft/mistral_sft_checkpoints/: training_summary.json
(+25 files in other folders)
